# tree-sop-agent

./: .gitignore  AgentHarness.spec  ITERATION_LOG.md  LICENSE  PIPELINE_KANBAN.md  README.md  auto_test.py  pyproject.toml  run.py
.trae/specs/task-001-skill-agent-mapping/: spec.md  tasks.md
.trae/specs/task-007-memory-system/: spec.md  tasks.md
desktop/: package.json
desktop/src-tauri/: tauri.conf.json
docs/: BUG_REPORT.md  audit-alpha-0.2.md  deepseek-gap-analysis.md  framework-comparison-report.md  framework-tech-routes-2026.html  security-vulnerabilities-alpha-0.2.md  technical-whitepaper-v2.md  technical-whitepaper-v3.md  technical-whitepaper.md
docs/prd/: task-001-skill-agent-mapping-prd.md  task-002-orch-checkpoint-workflow-deploy-prd.md  task-003-agent-core-refactor-prd.md  task-006-tauri-native-desktop-prd.md  task-007-memory-system-prd.md
skills/Luyi14-loop-sop/: LOG.md
skills/Luyi14-pm-mentor/: LOG.md
skills/Luyi14-project-secretary/: LOG.md
src/agent_harness/: __init__.py  settings.py
src/agent_harness/adapters/: __init__.py  cache_engine.py  context.py  conversation_compressor.py  deepseek_adapter.py  embedding_index.py  mcp_client.py  model_router.py  repo_map.py
src/agent_harness/cli/: main.py
src/agent_harness/core/: __init__.py  agent_factory.py  config_manager.py  (+4 more)
tests/: test_agent_mapping.py  test_context_compression.py  test_e2e_loop.py  test_framework_api.py  test_iteration2.py  test_memory.py  test_skill_parser.py
versions/Alpha-0.2/: VERSION.md
versions/v0.1.0/: VERSION.md
versions/v0.1.0-alpha/: VERSION.md
(+15 files in other folders)
