[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jig"
version = "0.6.0"
description = "Agent framework with pre-execution safety gates — ToolGuard. DeepSeek-optimized, multi-model, graph orchestration."
readme = "README.md"
authors = [{ name = "Jig Contributors" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/luyi14-bits/jig"
Source = "https://github.com/luyi14-bits/jig"
BugReports = "https://github.com/luyi14-bits/jig/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["jig*"]
